# redex

./: .gitignore  LICENSE  README.md  config.yaml.example  pyproject.toml  test_redex.py
hf_space/: README.md  app.py
redex/: __init__.py  __main__.py  app.py  cli.py
redex/internal/api/: reddit.py
redex/internal/archive/: sync.py
redex/internal/db/: schema.py
redex/internal/search/: query.py
