[project]
name = "redex"
version = "0.1.0"
description = "Reddit Index — local, searchable Reddit archive"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "my-ai-stack", email = "contact@my-ai-stack.com"}
]

dependencies = [
    "aiosqlite>=0.20.0",
    "click>=8.1.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0.0",
    "python-dateutil>=2.9.0",
    "tenacity>=9.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
semantic = [
    "sentence-transformers>=3.0.0",
    "torch>=2.0.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
]

[project.scripts]
redex = "redex.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py310"
